--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Example</title>
+        <title>Title</title>
     </head
     <body>
         <p>Fan's homepage.</p>
